--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.holder {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+	align-items:center;
+	justify-content:center;
+}
+.item {
+  height:70px;
+	width:70px;
+  background-color: lightblue;
+  border: 1px solid #000;
+}
